# ece-470-590-TermProject-GomesOlavo

./: CMakeLists.txt  README.md  Term_project_GomesOlavo.py  common.py  dynamixel_position.py  functions_IK.py  model.config  model.sdf  motors.cc  robot-view  sim_robot.world  video.cc
